# bytegate

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: lib.rs  main.rs  migration.rs  routes.rs
src/app/: mod.rs
src/app/common/: config.rs  errors.rs  mod.rs  utils.rs
src/app/handler/: healthcheck.rs  mod.rs  shortener.rs  user.rs
src/app/infrastructure/postgres/: postgres.rs
src/app/model/dto/: mod.rs  shortener.rs  url_maps.rs  user.rs
src/app/repository/: mod.rs  shortener.rs  user.rs
src/app/usecase/: mod.rs  shortener.rs  user.rs
src/migrations/: 0002_create_user_table.sql  V1__create_url_map_table.sql
