[package]
name = "bytegate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
axum = "0.8.1"
base62 = "2.2.1"
bcrypt = "0.17.0"
chrono = "0.4.40"
dotenvy = "0.15.7"
hyper = "1.6.0"
postgres = "0.19.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "rust_decimal", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4"] }

